--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -77,7 +77,15 @@ a {
   max-width: 95%;
   margin-top: 1px auto;
 }
-
+/* .hero-container, */
+.events-container,
+.weather-container,
+.spotlights-container {
+    padding: 40px 10px;
+    background-color: var(--site-color-06);
+    border: 3px solid var(--site-color-01);
+    border-radius: 10px;
+}
 .hero-container {
   margin: 0 auto ;
 }
@@ -130,12 +138,25 @@ a {
   background-color: lightblue;
   color: #DB9817;    
 }
+.weather-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 10px 10px 20px 10px;
+  margin: 0 auto;
+}
+.weather-container h2 {
+  margin: 0 0 10px 0;
+  font-size: 2rem;
+
+}
 
 
 .weather-container .data-title {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: rgb(7, 19, 243);
 
 }
@@ -149,8 +170,13 @@ a {
 .data-table {
   display: grid;
   grid-template-columns: auto auto;
-  column-gap: 1rem;
-  row-gap: 1rem;
+  column-gap: 1.75rem;
+  row-gap: 0.5rem;
+}
+.data-table .date-title {
+  font-family: var(--headline-font-family);
+  font-weight: bold !important;
+  font-size: 1.2rem;
 }
 /* Consolidated container styles */
 .events-container,
