--- a/styles/larger.css
+++ b/styles/larger.css
@@ -3,6 +3,8 @@
     main {
         width: 95%;
         margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
     #portrait-photo {
         width: 200px; /* Adjust the width of the image to its container */
@@ -25,6 +27,7 @@
         font-size: 1.2rem;
         font-weight: 700;
     }
+    
 
     #navigation li {
         /* flex: 1 1 auto; Allow items to grow but not take up 100% width  */
