--- a/styles/larger.css
+++ b/styles/larger.css
@@ -3,8 +3,6 @@
     main {
         width: 95%;
         margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
     }
     #portrait-photo {
         width: 200px; /* Adjust the width of the image to its container */
@@ -37,10 +35,10 @@
     }
     .container-main {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 1fr 1fr;
     }
-    .container-main-hero {
-        grid-column: span 3;
+    .hero {
+        grid-column: span 2;
     }
 
     .hero-label {
