--- a/styles/base.css
+++ b/styles/base.css
@@ -135,6 +135,15 @@ ul li:hover {
     text-align: center;
     padding: 1rem;
 }
+.weather-content h4 {
+    font-size: 1.2em;
+    text-align: center;
+    margin-top: .5em;
+}
+
+.weather-content .data-label {
+    font-weight: 600;
+}
 
 .map-container iframe {
     width: 100%;
