--- a/styles/larger.css
+++ b/styles/larger.css
@@ -53,6 +53,15 @@
     .container-main-title {
         grid-column: span 3;
     }
+    .weather-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 10px 20px 10px;
+        /* row-gap: 1.2em; */
+        margin: .5em 0;
+    }
     iframe {
         margin: 0 auto;
     }
