--- a/styles/medium.css
+++ b/styles/medium.css
@@ -59,6 +59,15 @@
   .container-main-title {
       grid-column: span 2;
   }
+  .weather-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 5px 10px 5px;
+    /* row-gap: .5em; */
+    margin: 1em 0;
+}
 
   iframe {
       grid-column: span 2;
