--- a/lesson07/styles/lazyload.css
+++ b/lesson07/styles/lazyload.css
@@ -11,11 +11,18 @@ header {
 }
 
 main {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  row-gap: 2em;
+  max-width: 95%;
 }
-
+main p{
+  font-size: 1.2em;
+  line-height: 1.5em;
+}
 img {
   width: 400px;
   height: auto;
