--- a/lesson09/styles/prophets.css
+++ b/lesson09/styles/prophets.css
@@ -32,6 +32,11 @@ section {
   width: 300px;
   text-align: center;
 }
+section p {
+  font-size: 1rem;
+  color: #555;
+  margin: 5px 0;
+}
 
 h2 {
   font-size: 1.5rem;
