--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -10,7 +10,7 @@
 
  html {
   line-height: 1.15; /* 1 */
-  text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -196,7 +196,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-appearance: button;
+  -webkit-appearance: button;
 }
 
 /**
@@ -277,10 +277,8 @@ textarea {
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
-[type="number"]
-inner-spin-button,
-[type="number"]
-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -290,7 +288,7 @@ outer-spin-button {
  */
 
 [type="search"] {
-  appearance: textfield; /* 1 */
+  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
 
@@ -298,9 +296,8 @@ outer-spin-button {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]
-search-decoration {
-  appearance: none;
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
 
 /**
@@ -308,8 +305,8 @@ search-decoration {
  * 2. Change font properties to `inherit` in Safari.
  */
 
-file-upload-button {
-  appearance: button; /* 1 */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
 
